WAM-Studio-SF-Build/force-app/main/default/objects/Client_Health_Score__c/Client_Health_Score__c.object-meta.xml
<CustomObject>
    <description>Composite client health score and drivers. Part of Salesforce Wealth AI Studio.</description>
    <label>Client Health Score</label>
    <nameField>
        <displayFormat>CHS-{00000}</displayFormat>
        <label>Client Health Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Health Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>