WAM-Studio-SF-Build/force-app/main/default/objects/Client_Health_Score__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Health Scores</relationshipLabel>
    <relationshipName>Client_Health_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>