WAM-Studio-SF-Build/force-app/main/default/objects/Client_Health_Score__c/fields/Score_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Score_Drivers__c</fullName>
    <label>Score Drivers</label>
    <description>Human-readable explanation of the factors driving this client health score (engagement, compliance findings, portfolio alerts, unactioned recommendations).</description>
    <inlineHelpText>Why the health score is what it is — the specific signals that raised or lowered it.</inlineHelpText>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>